// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getByBlockId > should get a block by block number 1`] = `
{
  "blobAsCalldataGasUsed": 255000n,
  "blobGasBaseFee": 121000000n,
  "blobGasPrice": 22n,
  "blobGasUsed": 5500000n,
  "ethUsdPrice": undefined,
  "excessBlobGas": 15000n,
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": 2023-05-10T12:00:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b1/data",
            },
          ],
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b1",
        },
        {
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b2/data",
            },
          ],
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b2",
        },
        {
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b3/data",
            },
          ],
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b3",
        },
      ],
      "hash": "txHash004",
    },
  ],
}
`;

exports[`getByBlockId > should get a block by hash 1`] = `
{
  "blobAsCalldataGasUsed": 255000n,
  "blobGasBaseFee": 55000000n,
  "blobGasPrice": 22n,
  "blobGasUsed": 2500000n,
  "ethUsdPrice": undefined,
  "excessBlobGas": 55000n,
  "hash": "0x00903f147f44929cdb385b595b2e745566fe50658362b4e3821fa52b5ebe8f06",
  "number": 1008,
  "slot": 110,
  "timestamp": 2023-08-31T15:50:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01d5cc28986f58db309e0fae63b60ade81a01667721e190ec142051240b5d436/data",
            },
          ],
          "versionedHash": "0x01d5cc28986f58db309e0fae63b60ade81a01667721e190ec142051240b5d436",
        },
      ],
      "hash": "0xd80214f2e7c7271114f372b6a8baaf39bcb364448788f6d8229d2a903edf9272",
    },
  ],
}
`;

exports[`getByBlockId > should get a reorged block by block number 1`] = `
{
  "blobAsCalldataGasUsed": 255000n,
  "blobGasBaseFee": 55000000n,
  "blobGasPrice": 22n,
  "blobGasUsed": 2500000n,
  "ethUsdPrice": undefined,
  "excessBlobGas": 55000n,
  "hash": "0x00903f147f44929cdb385b595b2e745566fe50658362b4e3821fa52b5ebe8f06",
  "number": 1008,
  "slot": 110,
  "timestamp": 2023-08-31T15:50:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01d5cc28986f58db309e0fae63b60ade81a01667721e190ec142051240b5d436/data",
            },
          ],
          "versionedHash": "0x01d5cc28986f58db309e0fae63b60ade81a01667721e190ec142051240b5d436",
        },
      ],
      "hash": "0xd80214f2e7c7271114f372b6a8baaf39bcb364448788f6d8229d2a903edf9272",
    },
  ],
}
`;

exports[`getByBlockId > should get latest block 1`] = `
{
  "blobAsCalldataGasUsed": 255000n,
  "blobGasBaseFee": 121000000n,
  "blobGasPrice": 22n,
  "blobGasUsed": 5500000n,
  "ethUsdPrice": undefined,
  "excessBlobGas": 15000n,
  "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
  "number": 1008,
  "slot": 108,
  "timestamp": 2023-08-31T16:00:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "dataStorageReferences": [
            {
              "storage": "swarm",
              "url": "https://api.gateway.ethswarm.org/bzz/bzz://sfsfsdfsdfsdfs",
            },
          ],
          "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
        },
      ],
      "hash": "txHash016",
    },
  ],
}
`;

exports[`getByBlockId > should get oldest block 1`] = `
{
  "blobAsCalldataGasUsed": 2042780n,
  "blobGasBaseFee": 17301504n,
  "blobGasPrice": 22n,
  "blobGasUsed": 786432n,
  "ethUsdPrice": undefined,
  "excessBlobGas": 15000n,
  "hash": "0x1000000000000000000000000000000000000000000000000000000000000000",
  "number": 1001,
  "slot": 101,
  "timestamp": 2022-10-16T12:00:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "dataStorageReferences": [
            {
              "storage": "google",
              "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
            },
            {
              "storage": "swarm",
              "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
            },
          ],
          "versionedHash": "blobHash001",
        },
        {
          "dataStorageReferences": [
            {
              "storage": "google",
              "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
            },
          ],
          "versionedHash": "blobHash002",
        },
        {
          "dataStorageReferences": [
            {
              "storage": "google",
              "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash003.bin?alt=media",
            },
            {
              "storage": "swarm",
              "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash003",
            },
          ],
          "versionedHash": "blobHash003",
        },
      ],
      "hash": "txHash001",
    },
    {
      "blobs": [
        {
          "dataStorageReferences": [
            {
              "storage": "google",
              "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
            },
            {
              "storage": "swarm",
              "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
            },
          ],
          "versionedHash": "blobHash001",
        },
      ],
      "hash": "txHash002",
    },
    {
      "blobs": [
        {
          "dataStorageReferences": [
            {
              "storage": "google",
              "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
            },
            {
              "storage": "swarm",
              "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
            },
          ],
          "versionedHash": "blobHash001",
        },
        {
          "dataStorageReferences": [
            {
              "storage": "google",
              "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
            },
          ],
          "versionedHash": "blobHash002",
        },
      ],
      "hash": "txHash003",
    },
  ],
}
`;

exports[`getByBlockId > should get the canonical block when providing a block number matching a reorged block 1`] = `
{
  "blobAsCalldataGasUsed": 255000n,
  "blobGasBaseFee": 121000000n,
  "blobGasPrice": 22n,
  "blobGasUsed": 5500000n,
  "ethUsdPrice": undefined,
  "excessBlobGas": 15000n,
  "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
  "number": 1008,
  "slot": 108,
  "timestamp": 2023-08-31T16:00:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "dataStorageReferences": [
            {
              "storage": "swarm",
              "url": "https://api.gateway.ethswarm.org/bzz/bzz://sfsfsdfsdfsdfs",
            },
          ],
          "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
        },
      ],
      "hash": "txHash016",
    },
  ],
}
`;

exports[`getByBlockId > when getting expanded block results > should return the correct expanded blob 1`] = `
{
  "blobAsCalldataGasUsed": 255000n,
  "blobGasBaseFee": 121000000n,
  "blobGasPrice": 22n,
  "blobGasUsed": 5500000n,
  "ethUsdPrice": undefined,
  "excessBlobGas": 15000n,
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": 2023-05-10T12:00:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b1",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b1/data",
            },
          ],
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab1",
          "size": 131072,
          "usageSize": 0,
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b1",
        },
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b2",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b2/data",
            },
          ],
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab2",
          "size": 131072,
          "usageSize": 0,
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b2",
        },
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b3",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b3/data",
            },
          ],
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab3",
          "size": 131072,
          "usageSize": 0,
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b3",
        },
      ],
      "hash": "txHash004",
    },
  ],
}
`;

exports[`getByBlockId > when getting expanded block results > should return the correct expanded results when multiple expands are requested 1`] = `
{
  "blobAsCalldataGasUsed": 255000n,
  "blobGasBaseFee": 121000000n,
  "blobGasPrice": 22n,
  "blobGasUsed": 5500000n,
  "ethUsdPrice": undefined,
  "excessBlobGas": 15000n,
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": 2023-05-10T12:00:00.000Z,
  "transactions": [
    {
      "blobAsCalldataGasFee": 10000n,
      "blobAsCalldataGasUsed": 1000n,
      "blobGasBaseFee": 8650752n,
      "blobGasMaxFee": 39321600n,
      "blobGasUsed": 393216n,
      "blobs": [
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b1",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b1/data",
            },
          ],
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab1",
          "size": 131072,
          "usageSize": 0,
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b1",
        },
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b2",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b2/data",
            },
          ],
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab2",
          "size": 131072,
          "usageSize": 0,
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b2",
        },
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b3",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b3/data",
            },
          ],
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab3",
          "size": 131072,
          "usageSize": 0,
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b3",
        },
      ],
      "category": "rollup",
      "decodedFields": null,
      "from": "0x5050f69a9786f081509234f1a7f4684b5e5b76c9",
      "hash": "txHash004",
      "index": 0,
      "maxFeePerBlobGas": 100n,
      "rollup": "base",
      "to": "address3",
    },
  ],
}
`;

exports[`getByBlockId > when getting expanded block results > should return the correct expanded transaction 1`] = `
{
  "blobAsCalldataGasUsed": 255000n,
  "blobGasBaseFee": 121000000n,
  "blobGasPrice": 22n,
  "blobGasUsed": 5500000n,
  "ethUsdPrice": undefined,
  "excessBlobGas": 15000n,
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": 2023-05-10T12:00:00.000Z,
  "transactions": [
    {
      "blobAsCalldataGasFee": 10000n,
      "blobAsCalldataGasUsed": 1000n,
      "blobGasBaseFee": 8650752n,
      "blobGasMaxFee": 39321600n,
      "blobGasUsed": 393216n,
      "blobs": [
        {
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b1/data",
            },
          ],
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b1",
        },
        {
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b2/data",
            },
          ],
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b2",
        },
        {
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b3/data",
            },
          ],
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b3",
        },
      ],
      "category": "rollup",
      "decodedFields": null,
      "from": "0x5050f69a9786f081509234f1a7f4684b5e5b76c9",
      "hash": "txHash004",
      "index": 0,
      "maxFeePerBlobGas": 100n,
      "rollup": "base",
      "to": "address3",
    },
  ],
}
`;
